# Mali-G52-GPU-Mininig-on-Odroid-N2-

./: .gitignore  CMakeLists.txt  Run.txt  Test-Sequenz für stabiles Mining  complete_setup.sh  job.c  job.h  main.c  net_stratum.c  net_stratum.h  rinhash_argon2d_real.cl  rinhash_argon2d_test.cl  setup_rinhash_gpu.sh
kernels/: rinhash_argon2d.cl
src/: main.c  rinhash_argon2d.cl
